--- a/app/views/likes/create.js.erb
+++ b/app/views/likes/create.js.erb
@@ -1,1 +1,1 @@
-$("#like-button").html("<%= j(render "like", { photo: @photo, likes: @likes, like: @like }) %>")
+$("#like-button-<%= @photo.id %>").html("<%= j(render "like", { photo: @photo, likes: @likes, like: @like }) %>")
