--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,14 +1,36 @@
-<%= form_for(@user) do |f| %>
+ <div class="container">
+ <div class="row">
+ 	<div class="col"></div>
+ 	<div class="col-6">
+ 		<h5>ユーザ編集</h5>
+		<%= form_for(@user) do |f| %>
+			 <form>
+			 	<div class="form-group row">
+			 		<label class="col-md-4 col-form-label">名前</label>
+			 		<div class="col-md-8">
+			 			<%= f.text_field :name, class: "name" %>
+			 		</div>
+			 	</div>
+			 	<div class="form-group row">
+			 		<label class="col-md-4 col-form-label">自己紹介</label>
+			 		<div class="col-md-8">
+			 			<%= f.text_area :introduction, class: "introduction" %>
+			 		</div>
+			 	</div>
+			 	<div class="form-group row">
+			 		<label class="col-md-4 col-form-label">使っているカメラ</label>
+			 		<div class="col-md-8">
+			 			<%= f.text_field :camera, class: "camera" %>
+			 		</div>
+			 	</div>
+				<%= f.submit '更新',class: "post-button btn btn-info" %>
+			</form>
+		<% end %>
 
-	<label>name</label>
-	<%= f.text_field :name, class: "name" %>
+	</div>
+	<div class="col"></div>
+</div>
+</div>
 
-	<label>email</label>
-	<%= f.text_field :email, class: "email" %>
 
-	<label>introduction</label>
-	<%= f.text_area :introduction, class: "introduction" %>
 
-	<%= f.submit "更新" %>
-
-<% end %>
