--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,1 +1,12 @@
-<%== @article.text %>
+<div class="container">
+	<div class="row">
+		<div class="col"></div>
+
+		<div class="col-md-10">
+			<span><%= link_to @article.user.name, user_path(@article.user) %></span>
+			<span><%= @article.created_at.strftime('%Y年%m月%d日') %>に投稿</span>
+			<h1 style="margin: 40px 0;"><%= @article.title %></h1>
+			<%== @article.text %>
+		</div>
+	</div>
+</div>
