--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
             <%= link_to "About",photos_path,class:"nav-link" %>
           </li>
           <li class = "nav-item">
-            <%= link_to "Article",photos_path,class:"nav-link" %>
+            <%= link_to "Article",articles_path,class:"nav-link" %>
           </li>
 
           <% if user_signed_in? %>
