--- a/app/views/users/_show.html.erb
+++ b/app/views/users/_show.html.erb
@@ -6,7 +6,10 @@
             		<%= link_to "編集",edit_user_path(@user),class: "btn btn-primary btn-sm edit-btn" %>
             	<% end %>
 				<%= render 'follow_form' %>
-				<h2><%= @user.name %></h2>
+				<div>
+					<%= attachment_image_tag @user,:image,:fill,35,35,fallback: "no_image-40.png" %>
+					<h2 style="display: inline-block;"><%= @user.name %></h2>
+				</div>
 				<p><%= @user.introduction %></p>
 				<% unless @user.camera.blank? %>
 					<p><i class="fas fa-camera"></i>              <%= @user.camera %></p>
@@ -31,6 +34,7 @@
 							<div class = "card photo-card border border-0">
 								<%= link_to attachment_image_tag(photo, :image, :fill, 600, 400, format: 'jpeg',class: "card-img-top"), photo_path(photo.id) %>
 								<div class="card-text">
+									<%= render 'likes/like', { photo: photo } %>
 									<%= render 'photos_tag_list', tag_list: photo.tag_list %>
 								</div>
 							</div>
