--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -6,6 +6,13 @@
 		<%= form_for(@user) do |f| %>
 			 <form>
 			 	<div class="form-group row">
+			 		<label class="col-md-4 col-form-label">サムネイルを登録</label>
+			 		<div class="col-md-8">
+			 			<%= f.attachment_field :image, class: "image" %>
+			 		</div>
+			 	</div>
+
+			 	<div class="form-group row">
 			 		<label class="col-md-4 col-form-label">名前</label>
 			 		<div class="col-md-8">
 			 			<%= f.text_field :name, class: "name" %>
