--- a/app/views/users/show_follow.html.erb
+++ b/app/views/users/show_follow.html.erb
@@ -4,7 +4,7 @@
 			<div class="col-md-2">
 				<%= link_to user_path(user) do %>
 				<div class="card" style="height: 200px;">
-					<%= attachment_image_tag user, :image,:fill, fallback: "no_image-1.png", class: "card-imag-top" %>
+					<%= attachment_image_tag user, :image,:fill,140,140,fallback: "no_image-1.png", class: "card-img-top" %>
 					<div class="card-text">
 						<span><%= user.name %></span>
 						<i class="fas fa-user"></i>
