--- a/app/views/users/show_follower.html.erb
+++ b/app/views/users/show_follower.html.erb
@@ -1,9 +1,18 @@
- <% @user.followers.each do |user| %>
-<table>
-<tr>
-  <td>  <%= user.name %> </td>
-  <td><%= link_to '詳細', user_path(user) %></td>
-</tr>
-
-</table>
-<% end %>
+<div class="container">
+	<div class="row">
+		<% @user.followers.each do |user| %>
+			<div class="col-md-2">
+				<%= link_to user_path(user) do %>
+				<div class="card" style="height: 200px;">
+					<%= attachment_image_tag user, :image,:fill,140,140,fallback: "no_image-1.png", class: "card-img-top" %>
+					<div class="card-text">
+						<span><%= user.name %></span>
+						<i class="fas fa-user"></i>
+						<span><%= user.followers.count %></span>
+					</div>
+				</div>
+				<% end %>
+			</div>
+		<% end %>
+	</div>
+</div>
