--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,6 +1,16 @@
 <div class="container">
 	<div class="row">
-		<div class="col"></div>
+		<div class="col-md-3">
+			<%= search_form_for @query,url: articles_search_path, method: :post do |f| %>
+
+			    <div class="form-group">
+			      <label>記事検索</label><br />
+			      <%= f.search_field :text_cont,
+			                         class: 'form-control',
+			                         value: params.dig(:q, :text_cont) %>
+		    	</div>
+		  	<% end %>
+		</div>
 		<div class="col-md-6">
 			<h3>記事一覧</h3>
 			<div class="list-group list-group">
@@ -13,6 +23,7 @@
 				    <% end %>
 				<% end %>
 			</div>
+			<%= paginate @articles %>
 		</div>
 		<div class="col"></div>
 	</div>
