--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,11 @@
 <div class="container">
 	<div class="row">
-		<div class="col"></div>
+		<div class="col">
+			<% if @article.user == current_user %>
+				<span><%= link_to "編集する", edit_article_path(@article), class: "btn btn-info" %></span>
+				<span><%= button_to "削除する",article_path(@article), method: :delete , data: { confirm: '削除しますか？' },class: "btn btn-danger" %></span>
+			<% end %>
+		</div>
 
 		<div class="col-md-10">
 			<span><%= link_to @article.user.name, user_path(@article.user) %></span>
