--- a/app/views/photos/_sidebar.html.erb
+++ b/app/views/photos/_sidebar.html.erb
@@ -1,8 +1,23 @@
 <div class= "sidebar">
+  <!-- よく使われるタグ -->
   <h6>人気のタグ</h6>
   <% @tags.each do |tag| %>
   	<%= link_to tag.name, tag_show_path(:tag_name => tag.name), class: "badge badge-pill badge-secondary" %>
   <% end %>
+
+  <!-- タグ検索フォーム -->
+  <%= search_form_for @query,url: tags_search_path, method: :post do |f| %>
+
+    <div class="form-group">
+      <label>タグ検索</label><br />
+      <%= f.search_field :tags_name_cont,
+                         class: 'form-control',
+                         value: params.dig(:q, :tags_name_cont) %>
+    </div>
+
+  <% end %>
+
+  <!-- フォロワーの多いユーザー -->
   <h6>人気のユーザー</h6>
   <% @users.each do |user| %>
     <%= link_to user_path(user),class: "user-link-button" do %>
