--- a/app/views/users/_photos_tag_list.html.erb
+++ b/app/views/users/_photos_tag_list.html.erb
@@ -1,3 +1,3 @@
 <% tag_list.each do |tag| %>
-  <span class="badge badge-pill badge-secondary"><%= tag %></span>
+  <%= link_to tag, tag_show_path(:tag_name => tag), class: "badge badge-pill badge-secondary" %>
 <% end %>
