--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,52 @@
-<%= render 'show' %>
+<div class="container">
+	<div class = "row">
+        <div class= "col-md-4">
+            <div class= "sidebar">
+            	<% if user_signed_in? %>
+	            	<% if @user.id == current_user.id %>
+	            		<%= link_to "編集",edit_user_path(@user),class: "btn btn-primary btn-sm edit-btn" %>
+	            	<% end %>
+					<%= render 'follow_form' %>
+				<% end %>
+				<div>
+					<%= attachment_image_tag @user,:image,:fill,35,35,fallback: "no_image-40.png" %>
+					<h2 style="display: inline-block;"><%= @user.name %></h2>
+				</div>
+				<p><%= @user.introduction %></p>
+				<% unless @user.camera.blank? %>
+					<p><i class="fas fa-camera"></i>              <%= @user.camera %></p>
+				<% end %>
+				<%= render 'stats' %>
+				<%= month_calendar(attribute: :created_at, events: @calendar_photos) do |date,photos| %>
+  				<% if photos.count > 0 %>
+	  				<div class="count"><%= photos.count %>枚</div>
+  				<% end %>
+			  <% end %>
+            </div>
+          </div>
+		<div class="col-md-8">
+        	<%= link_to "PHOTOS", user_path(@user),class:"btn btn-dark" %>
+        	<%= link_to user_favorite_photos_path(@user),class:"btn btn-outline-dark" do %>
+        		<span><%= image_tag("heart_red.png", :size => "14x14") %></span>
+        		<span>FAVORITE PHOTOS</span>
+        	<% end %>
+        	<%= link_to "ARTICLES", user_articles_path(@user),class:"btn btn-outline-dark" %>
+			<div class="row">
+				<% @photos.each do |photo| %>
+						<div class="col-md-5 content">
+							<div class = "card photo-card border border-0">
+								<%= link_to attachment_image_tag(photo, :image, :fill, 600, 400, format: 'jpeg',class: "card-img-top"), photo_path(photo.id) %>
+								<div class="card-text">
+									<%= render 'likes/like', { photo: photo } %>
+									<%= render 'photos_tag_list', tag_list: photo.tag_list %>
+								</div>
+							</div>
+						</div>
+				<% end %>
+				<div class="col-md-12">
+					<%= paginate @photos %>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
